# dotfiles

./: Makefile  README.md  bootstrap.sh  pyproject.toml
arch_bootstrap/: config.py  dotfiles.py  envdetect.py  keys.py  main.py  packages.py  pam.py  repo.py  users.py  utils.py
dotfiles-homedir/: aliases  dot-zshrc
dotfiles/yazi/: package.toml
keys/: SSH_SK_784.pub
package-lists/: pkglist-aur.txt  pkglist-base.txt  pkglist-vm.txt  pkglist-wsl.txt
tests/: conftest.py  mocks.py  test_dotfiles.py  test_envdetect.py  test_keys.py  test_packages.py  test_pam.py  test_repo.py  test_smoke.py  test_users.py  test_utils.py
